Began HTML Page 2

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 75%;
+  width: 33%;
+  text-align: left;
 }
 
 td, th {
