--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,41 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+}
+
+.title{
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.dropdown{
+  position: relative;
+  width:100%;
+}
+
+.choose-states{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
+  position: absolute; 
+  padding-left: 5%;
+  top: 150px; 
+  left: 0; 
+  width: 100%; 
+}
+
+.states{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
+  position: absolute; 
+  padding-left: 5%;
+  top: 250px; 
+  left: 50px; 
+  width: 50%; 
+  height: 400px;
+}
+
+html{
+  background-color: deepskyblue;
 }
 
 table {
