--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@
   margin-right: auto;
 }
 
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.flex-container > div {
+  width: 100px;
+  margin: 200px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
+
 .title{
   padding-top: 5%;
   padding-bottom: 5%;
@@ -13,33 +26,58 @@
   width:50%;
 }
 
-.dropdown{
+/* .dropdown{
   padding-left: 10%;
   position: relative;
   width:100%;
-}
+} */
 
-.choose-states{
+.choose{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 50px;
+  font-size: 30px;
   position: absolute; 
-  padding-left: 13%;
-  top: 150px; 
-  left: 0; 
-  width: 100%; 
+  padding-left: 3%;
+  top: 60%; 
+  left: 13%;  
 }
 
 .states{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 50px;
+  font-size: 20px;
   position: absolute; 
   padding-left: 5%;
   margin-top: 50pt;
-  margin-left: 200pt;
-  top: 250px; 
-  left: 50px; 
-  width: 30%; 
-  height: 450px;
+  margin-left: 100pt;
+  top: 70%; 
+  left: 8%; 
+  width: 20%; 
+  height: 300px;
+}
+
+.jobs{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  position: absolute; 
+  padding-left: 5%;
+  margin-top: 50pt;
+  margin-left: 100pt;
+  top: 70%; 
+  left: 30%; 
+  width: 20%; 
+  height: 300px;
+}
+
+.skills{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  position: absolute; 
+  padding-left: 5%;
+  margin-top: 50pt;
+  margin-left: 300pt;
+  top: 70%; 
+  left: 48%; 
+  width: 20%; 
+  height: 30px;
 }
 
 html{
@@ -49,14 +87,14 @@ html{
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 33%;
+  width: 1%;
   text-align: left;
 }
 
 td, th {
   border: 1px solid #dddddd;
   text-align: center;
-  padding: 8px;
+  padding: 0px;
 }
 
 tr:nth-child(even) {
